# pip-freezer

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  HISTORY.md  HISTORY.rst  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  md2rst.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py
docs/: mkdocs.yml
docs/docs/: index.md
pipfreezer/: __init__.py  organizers.py  pipfreezer.py  utils.py
pipfreezer/data/: pipfreezer.cfg
requirements/: base.txt  local.txt  requirements_dev.txt  requirements_test.txt
src/pipfreezer/: __init__.py  cli.py  console.py  package_data.py  pipfreezer.py
tests/: test_console.py  test_methods.py  test_package_data.py  test_pipfreezer.py  test_prints.py
