[metadata]
# long_description = file: README.md
long_description_content_type = text/markdown

[bdist_wheel]
universal = 1

[isort]
line_length = 88
known_first_party = pipfreezer
multi_line_output = 3
default_section = THIRDPARTY
skip = venv/
skip_glob = **/migrations/*.py
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[flake8]
ignore = D203, W503
exclude =
    pipfreezer/migrations,
    .git,
    .tox,
    docs/conf.py,
    build,
    dist
max-line-length = 119
